--- a/cat-pinterest/src/styles/_buttons.scss
+++ b/cat-pinterest/src/styles/_buttons.scss
@@ -1,13 +1,13 @@
 button {
     background: $primary-color;
-    border: none;
+   
     color: $secondary-color;
-    padding: 8px 16px;
+    padding: 8px 23px;
     cursor: pointer;
     transition: background 0.3s;
   
     &:hover {
-      background: darken($primary-color, 10%);
+      background: $hover-button-color;
     }
   
     &.load-more {
