--- a/cat-pinterest/src/styles/_mixins.scss
+++ b/cat-pinterest/src/styles/_mixins.scss
@@ -1,7 +1,7 @@
 
-@mixin flex-center {
+@mixin flex-layout {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
   }
   
