--- a/cat-pinterest/src/styles/_variables.scss
+++ b/cat-pinterest/src/styles/_variables.scss
@@ -3,6 +3,8 @@ $primary-color: #2196f3;
 $secondary-color: #ffffff;
 $background-color: #f5f5f5;
 $text-color: #333;
+$active-button-color: #1e88e5;
+$hover-button-color: #3594e7;
 
 // Размеры
 $grid-gap: 16px;
