style: главная страница

--- a/cat-pinterest/src/styles/_header.scss
+++ b/cat-pinterest/src/styles/_header.scss
@@ -1,10 +1,9 @@
 header {
     background-color: $primary-color;
-    padding: 62px;
   
     nav {
       @include flex-layout;
-      
+      padding-left: 62px;
   
       button {
         background: transparent;
