--- a/cat-pinterest/src/styles/_buttons.scss
+++ b/cat-pinterest/src/styles/_buttons.scss
@@ -1,6 +1,6 @@
 button {
     background: $primary-color;
-   
+    border: none;
     color: $secondary-color;
     padding: 8px 23px;
     cursor: pointer;
@@ -8,11 +8,6 @@ button {
   
     &:hover {
       background: $hover-button-color;
-    }
-  
-    &.load-more {
-      margin: 16px auto;
-      display: block;
     }
   }
   
