--- a/cat-pinterest/src/styles/_grid.scss
+++ b/cat-pinterest/src/styles/_grid.scss
@@ -1,19 +1,21 @@
 .cat-grid {
     @include grid-layout(5, $grid-gap);
-    padding: 16px;
+    padding: 48px 62px;
     background-color: $background-color;
   
     .cat-item {
       position: relative;
       overflow: hidden;
       border: 1px solid #ddd;
-      border-radius: 8px;
       background: $secondary-color;
       transition: transform 0.3s, box-shadow 0.3s;
+      border: none;
   
       &:hover {
         transform: scale(1.05);
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        max-width: 256px;
+        max-height: 256px;
+        box-shadow: 0px 5px 10px 4px rgba(0, 0, 0, 0.3);
       }
   
       .image-wrapper {
@@ -28,7 +30,8 @@
           object-fit: cover;
           transition: transform 0.3s;
         }
-  
+
+        // простите, но это очень красиво, не могла не добавить 
         &:hover img {
           transform: scale(1.1);
         }
