--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -47,8 +47,31 @@
         opacity: 0;
         transition: opacity 0.3s;
 
+        svg {
+          path {
+            transition: d 0.3s, fill 0.3s;
+          }
+        }
+
+        &:hover {
+          svg {
+            path {
+              d: path(
+                "M20 36.7L17.1 34.06C6.8 24.72 0 18.56 0 11C0 4.84 4.84 0 11 0C14.48 0 17.82 1.62 20 4.18C22.18 1.62 25.52 0 29 0C35.16 0 40 4.84 40 11C40 18.56 33.2 24.72 22.9 34.08L20 36.7Z"
+              );
+            }
+          }
+        }
+
         &.active {
-          display: block;
+          svg {
+            path {
+              d: path(
+                "M20 36.7L17.1 34.06C6.8 24.72 0 18.56 0 11C0 4.84 4.84 0 11 0C14.48 0 17.82 1.62 20 4.18C22.18 1.62 25.52 0 29 0C35.16 0 40 4.84 40 11C40 18.56 33.2 24.72 22.9 34.08L20 36.7Z"
+              );
+              fill: #ff3a00;
+            }
+          }
         }
       }
 
